# jphz

./: .gitignore  CMakeLists.txt  LICENSE  client  emmy.config.json
examples/: config  config.path
learn/: 01_base.lua  02_env.lua  03_new_service.lua  04_unique_service.lua  05_query_service.lua  06_alias.lua  07_alias_name.lua  08_alias_query.lua  09_sleep.lua  10_fork.lua  11_busy_task.lua  12_yield.lua  13_wakeup.lua  14_timeout.lua  15_time.lua  16_assert.lua  17_lua_msg.lua  18_send_msg.lua  19_call_msg.lua  1_hello_skynet.lua  20_my_db.lua  21_test_my_db.lua  22_echo_lua_msg.lua  23_fork_call.lua  24_response_my_db.lua  25_noresponse.lua  26_test_noresponse.lua  27_my_db.lua  28_other_msg.lua  29_test_other_msg.lua  30_proxy.lua  31_test_my_db.lua  32_proxy.lua  33_redirect.lua  34_global_lua_msg.lua  35_global_call.lua  36_multicast_pub.lua  37_multicast_sub.lua  38_socket_service.lua  39_socket_client.c  (+38 more)
logic/: agent_gate.lua  aurora.lua  close_gate.lua  kick_gate.lua  test_login.lua
logic/gate/: aurora_gate.lua
logic/helper/: utils.lua
logic/protoc/: aurora.pb  aurora.proto  recv_protos.lua
lualib-src/: CMakeLists.txt
service-src/: CMakeLists.txt  service_snlua.c
skynet-src/: CMakeLists.txt
